objects/Candidate__c.object
<CustomObject>
    <fields>
        <fullName>Alternate_Phone__c</fullName>
        <description>This field contains the alternate phone number of the candidate</description>
        <inlineHelpText>This field contains the alternate phone number of the candidate</inlineHelpText>
        <label>Alternate Phone</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_City__c</fullName>
        <description>The current city of the candidate</description>
        <label>Current City</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Current_Company__c</fullName>
        <description>Details about the current company of the candidate</description>
        <label>Current Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Compensation__c</fullName>
        <description>Current compensation (Fixed+Var) of the candidate</description>
        <label>Current Compensation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Designation__c</fullName>
        <description>Current designation of the candidate in the current company</description>
        <label>Current Designation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expected_CTC__c</fullName>
        <description>Expected CTC of the candidate</description>
        <label>Expected CTC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <description>Details about the candidate&apos;s gender</description>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Female</fullName>
                </value>
                <value>
                    <fullName>Prefer not to say</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notice_Period__c</fullName>
        <description>Notice period of the candidate in the current company</description>
        <label>Notice Period</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ready_to_relocate__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If the candidate is ready to relocate to the job position</description>
        <label>Ready to relocate?</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>